ZEN-10156: fixes unreadable text in dialog boxes after (regression introduced in ZEN-9377)

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -1474,6 +1474,10 @@ a.z-entity:link, a.z-entity:hover, a.z-entity:visited {
     padding-right:0 !important;
 }
 
+.x-window .x-grid-header-ct, .x-window .x-grid-cell-inner, .x-window .x-boundlist {
+  color: #444444 !important;
+}
+
 .x-window-body .x-panel-body .x-boundlist li{
   color: #000 !important;
 }
